Bug 487762 - A window briefly appears and disappears when opening an applet configuration window which contains an icon chooser button
Summary: A window briefly appears and disappears when opening an applet configuration ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kiconthemes
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
: 476116 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-29 19:26 UTC by ratijas
Modified: 2024-05-30 15:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
plas…hell.mp4 (225.01 KB, video/mp4)
2024-05-29 19:26 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2024-05-29 19:26:07 UTC
Created attachment 169955 [details]
plas…hell.mp4

SUMMARY

See the attached video. Some mysterious mini-popup window briefly appears and immediately closes itself when switching to the General tab (in case of Application Dashboard).

STEPS TO REPRODUCE
1. Open configuration window of Application Dashboard, Application Launcher, Folder View or any other applet that has an icon chooser button.

OBSERVED RESULT
"plas…hell" window briefly appears and immediately closes itself.

EXPECTED RESULT
no popups

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1
Kernel Version: 6.9.2-arch1-1 (64-bit)
Graphics Platform: X11
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Comment 1 ratijas 2024-05-29 19:52:37 UTC
This is a bug either in the IconDialog QML Type from org.kde.iconthemes module, or in the KIconDialog class itself.
Comment 2 ratijas 2024-05-29 20:45:55 UTC
I coded a little QtWidgets app, and can confirm this is a bug in the KIconDialog class itself, no QML involved.
Comment 3 Bug Janitor Service 2024-05-30 00:59:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/140
Comment 4 Fushan Wen 2024-05-30 08:10:15 UTC
*** Bug 476116 has been marked as a duplicate of this bug. ***
Comment 5 ratijas 2024-05-30 15:35:45 UTC
Git commit 72ff9a1d61119bbf0966740e4a26ba99dc2e2e96 by ivan tkachenko.
Committed on 30/05/2024 at 00:54.
Pushed by cullmann into branch 'master'.

KIconDialog: Prevent briefly visible mini-window from showing up

Any QWidget on show() would create a window of their own, if they are
not parented to any other widget which has a window already. Don't call
show() on the placeholder label before it is parented to the invisible
dialog widget.

M  +2    -2    src/widgets/kicondialog.cpp

https://invent.kde.org/frameworks/kiconthemes/-/commit/72ff9a1d61119bbf0966740e4a26ba99dc2e2e96