KIconDialog: Prevent briefly visible mini-window from showing up

Any QWidget on show() would create a window of their own, if they are
not parented to any other widget which has a window already. Don't call
show() on the placeholder label before it is parented to the invisible
dialog widget.

BUG: 487762